Adding tests Page/Section and update form modules

--- a/backend/api/src/test/resources/application-test.properties
+++ b/backend/api/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
 # Configuration de test
-# Note: spring.profiles.active ne doit pas être défini dans un fichier spécifique au profil
-# Base de données en mémoire pour les tests
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+# Note: spring.profiles.active ne doit pas ?tre d?fini dans un fichier sp?cifique au profil
+# Base de donn?es en m?moire pour les tests
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=PostgreSQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -10,13 +10,17 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-# Flyway désactivé pour les tests
+# Désactiver l'initialisation SQL automatique
+spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=false
+# Flyway d?sactiv? pour les tests
 spring.flyway.enabled=false
-# JWT Configuration pour les tests (valeurs fixes pour éviter les références circulaires)
+# JWT Configuration pour les tests (valeurs fixes pour ?viter les r?f?rences circulaires)
 JWT_SECRET_KEY=test-secret-key-for-unit-tests-that-is-long-enough-for-jwt-validation
 JWT_EXPIRATION_TIME=3600000
 # Logging
 logging.level.com.stemadeleine=DEBUG
 logging.level.org.springframework.security=DEBUG
-# Désactiver la sécurité pour certains tests si nécessaire
+logging.level.root=WARN
+# D?sactiver la s?curit? pour certains tests si n?cessaire
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
