--- a/frontend/frontoffice/package.json
+++ b/frontend/frontoffice/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.26.2",
@@ -41,9 +43,13 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "ajv": "^8.12.0",
     "autoprefixer": "^10.4.17",
+    "eslint": "^9.37.0",
+    "eslint-plugin-react": "^7.37.5",
     "postcss": "^8.4.35",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.1"
   }
 }
