--- a/backend/api/src/test/resources/application-test.properties
+++ b/backend/api/src/test/resources/application-test.properties
@@ -10,7 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-# Désactiver l'initialisation SQL automatique
+# D?sactiver l'initialisation SQL automatique
 spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=false
 # Flyway d?sactiv? pour les tests
@@ -24,3 +24,6 @@ logging.level.org.springframework.security=DEBUG
 logging.level.root=WARN
 # D?sactiver la s?curit? pour certains tests si n?cessaire
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+# reCAPTCHA Configuration for tests (Google test key - always passes)
+app.recaptcha.secret=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+
