--- a/backend/api/src/main/resources/application-dev.properties
+++ b/backend/api/src/main/resources/application-dev.properties
@@ -16,3 +16,5 @@ S3_ENDPOINT=${S3_ENDPOINT}
 ### JWT ###
 jwt.secret=${JWT_SECRET_KEY}
 jwt.expiration=86400000
+### reCAPTCHA ###
+app.recaptcha.secret=${RECAPTCHA_SECRET_KEY:6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe}
