--- a/frontend/frontoffice/package.json
+++ b/frontend/frontoffice/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
