--- a/frontend/stemadeleine/package.json
+++ b/frontend/stemadeleine/package.json
@@ -12,6 +12,8 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
