--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,10 @@ node_modules/
 # Environment files
 .env
 .env.local
-.env.*
+.env.development
+.env.production
+.env.test
+.env*.local
 !.env.example
 
 # IDE
