--- a/backend/api/.gitignore
+++ b/backend/api/.gitignore
@@ -34,4 +34,10 @@ build/
 
 ### Env ###
 # env files (can opt-in for committing if needed)
-.env*
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+.env*.local
+!.env.example
