--- a/frontend/backoffice/.gitignore
+++ b/frontend/backoffice/.gitignore
@@ -25,9 +25,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
 .env
-.env.*
+.env.local
+.env.development
+.env.production
+.env.test
+.env*.local
 !.env.example
 
 # vercel
