Deploying Api Render

--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=api
+### Server ###
+server.port=${PORT:8080}
 ### SupaBase DB ###
 spring.datasource.url=${SUPABASE_DB_URL}
 spring.datasource.username=${SUPABASE_DB_USER}
