--- a/backend/api/.env.example
+++ b/backend/api/.env.example
@@ -1,25 +1,22 @@
-# Database Configuration
-MAX_FILE_SIZE=10MB
-FILE_UPLOAD_DIR=./uploads
-# File Upload Configuration
+# Database Configuration (Supabase PostgreSQL)
+RECAPTCHA_SECRET_KEY=your_recaptcha_secret_key
+# Google reCAPTCHA
 
-SPRING_MAIL_PASSWORD=your_email_password
-SPRING_MAIL_USERNAME=your_email@example.com
-SPRING_MAIL_PORT=587
-SPRING_MAIL_HOST=smtp.example.com
-# Email Configuration (if needed)
+HELLOASSO_CLIENT_SECRET=your_helloasso_client_secret
+HELLOASSO_CLIENT_ID=your_helloasso_client_id
+# HelloAsso API
 
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
-# CORS Configuration
+JWT_SECRET_KEY=your_jwt_secret_key_min_256_bits
+# JWT Secret (generate a strong random key)
 
-SERVER_PORT=8080
-# Server Configuration
+S3_ENDPOINT=https://xxxxx.supabase.co/storage/v1/s3
+S3_REGION=eu-west-1
+S3_BUCKET=medias-prod
+S3_SECRET_ACCESS_KEY=your_secret_access_key
+S3_ACCESS_KEY_ID=your_access_key_id
+# Supabase Storage (S3 Compatible)
 
-JWT_EXPIRATION=86400000
-JWT_SECRET=your_jwt_secret_here_min_256_bits
-# JWT Configuration
-
-SPRING_DATASOURCE_PASSWORD=your_db_password
-SPRING_DATASOURCE_USERNAME=your_db_username
-SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3306/stemadeleine
+SUPABASE_DB_PASSWORD=your_supabase_password
+SUPABASE_DB_USER=postgres
+SUPABASE_DB_URL=jdbc:postgresql://db.xxxxx.supabase.co:5432/postgres
 
