--- a/backend/api/Dockerfile
+++ b/backend/api/Dockerfile
@@ -1,9 +1,14 @@
 FROM maven:3.9.9-eclipse-temurin-21 AS build
 WORKDIR /app
 COPY . .
-RUN mvn clean package
+RUN mvn clean package -DskipTests
 
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
-ENTRYPOINT ["java","-jar","-Dspring.profiles.active=dev","app.jar"]
+
+# Render fournit la variable PORT dynamiquement
+ENV PORT=8080
+EXPOSE $PORT
+
+ENTRYPOINT ["sh", "-c", "java -Dserver.port=${PORT} -Dspring.profiles.active=prod -jar app.jar"]
