--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -32,6 +32,10 @@ helloasso.client-secret=${HELLOASSO_CLIENT_SECRET}
 helloasso.api-url=https://api.helloasso.com
 ### reCAPTCHA ###
 app.recaptcha.secret=${RECAPTCHA_SECRET_KEY}
+### Actuator (Health Check) ###
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
+management.health.defaults.enabled=true
 ### Logging ###
 logging.level.root=INFO
 logging.level.com.stemadeleine=INFO
