--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -2,9 +2,7 @@ spring.application.name=api
 ### Server ###
 server.port=${PORT:8080}
 ### SupaBase DB ###
-spring.datasource.url=${SUPABASE_DB_URL}
-spring.datasource.username=${SUPABASE_DB_USER}
-spring.datasource.password=${SUPABASE_DB_PASSWORD}
+spring.datasource.url=${DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
