--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=api
 server.port=${PORT:8080}
 ### SupaBase DB ###
 spring.datasource.url=${DATABASE_URL}
+spring.datasource.hikari.data-source-properties.prepareThreshold=0
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
