fix backoffice login error

--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.servlet.multipart.max-request-size=10MB
 ### JWT ###
 jwt.secret=${JWT_SECRET_KEY}
 jwt.expiration=86400000
+jwt.cookie.secure=${JWT_COOKIE_SECURE:false}
 ### HelloAsso ###
 helloasso.client-id=${HELLOASSO_CLIENT_ID}
 helloasso.client-secret=${HELLOASSO_CLIENT_SECRET}
