init reset password

--- a/backend/api/.env.example
+++ b/backend/api/.env.example
@@ -8,6 +8,16 @@ HELLOASSO_CLIENT_ID=your_helloasso_client_id
 
 JWT_SECRET_KEY=your_jwt_secret_key_min_256_bits
 # JWT Secret (generate a strong random key)
+JWT_COOKIE_SECURE=false
+
+# Email Configuration (SMTP)
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-password
+MAIL_FROM=noreply@stemadeleine.fr
+MAIL_FROM_NAME=Sainte Madeleine
+FRONTEND_URL=https://backoffice-stemadeleine.onrender.com
 
 S3_ENDPOINT=https://xxxxx.supabase.co/storage/v1/s3
 S3_REGION=eu-west-1
