--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -32,6 +32,16 @@ helloasso.client-secret=${HELLOASSO_CLIENT_SECRET}
 helloasso.api-url=https://api.helloasso.com
 ### reCAPTCHA ###
 app.recaptcha.secret=${RECAPTCHA_SECRET_KEY}
+### Email ###
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+app.mail.from=${MAIL_FROM:noreply@stemadeleine.fr}
+app.mail.from-name=${MAIL_FROM_NAME:Sainte Madeleine}
+app.frontend.url=${FRONTEND_URL:https://backoffice-stemadeleine.onrender.com}
 ### Actuator (Health Check) ###
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
